fix heading levels.

--- a/docs/pages/enterprise/workflow/ssh-approval-slack.mdx
+++ b/docs/pages/enterprise/workflow/ssh-approval-slack.mdx
@@ -37,7 +37,7 @@ If you want the Slack plugin to connect through the web port (`teleport.example.
 OpenSource and Enterprise installations can connect to the auth service (`auth.example.com:3025`) directly.
 
 
-## Installing the Teleport Slack Plugin
+### Installing the Teleport Slack Plugin
 
 We recommend installing the Teleport Plugins alongside the Teleport Proxy. This is an ideal
 location as plugins have a low memory footprint, and will require both public internet access
@@ -72,7 +72,7 @@ these plugins from [source](https://github.com/gravitational/teleport-plugins/tr
 </TabItem>
 </Tabs>
 
-#### Create User and Role for the plugin
+### Create User and Role for the plugin
 
 <Tabs>
   <TabItem label="OpenSource, Enterprise" scope={["oss","enterprise"]}>
