--- a/docs/pages/server-access/guides/vscode.mdx
+++ b/docs/pages/server-access/guides/vscode.mdx
@@ -74,7 +74,7 @@ in the path below:
   </TabItem>
 </Tabs>
 
-You should be able to connect to the desired Node using following command:
+You should be able to connect to the desired node using following command:
 
 ```code
 $ ssh user@[node name].[cluster name]
